Fixed: Chrome overflow:hidden focus bug

--- a/src/ui/css/desktop.scss
+++ b/src/ui/css/desktop.scss
@@ -165,8 +165,13 @@ button.lr-desktop-icon{
   }
 }
 .lr-desktop-icons{
-  position: relative;
+  position: absolute;
   height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: 1;
 }
 .lr-text-icon{
   background-color: #ccc;
